Fix overflow style on table cells of presence module pages.

--- a/gdmatrix-web/src/main/webapp/common/presence/css/presence.css
+++ b/gdmatrix-web/src/main/webapp/common/presence/css/presence.css
@@ -1754,6 +1754,7 @@ input::-moz-focus-inner
   padding: 0px; 
   border: none;
   color: #000000;
+  overflow: visible;  
 }
 
 .input_text
